[project]
name = "pyecharts-express"
version = "0.1.0"
description = "Plotly-Express style API for pyecharts — build ECharts with concise, dataframe-friendly calls."
readme = "README.md"
authors = [
    { name = "tetsuji16", email = "tetsuji.kato@gmail.com" },
]
license = { text = "MIT" }
keywords = ["pyecharts", "echarts", "plotly-express", "visualization", "charts"]
requires-python = ">=3.11"
dependencies = [
    "pyecharts>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/tetsuji16/pyecharts-express"
Repository = "https://github.com/tetsuji16/pyecharts-express"
Documentation = "https://github.com/tetsuji16/pyecharts-express#readme"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
