[project]
name = "pyecharts-express"
version = "1.0.3"
description = "A plotly-express style API for pyecharts — build ECharts with concise, dataframe-friendly calls."
readme = "README.md"
authors = [
    { name = "tetsuji16" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["pyecharts", "echarts", "plotly-express", "visualization", "charts"]
requires-python = ">=3.11"
dependencies = [
    "pyecharts>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tetsuji16/pyecharts-express"
Repository = "https://github.com/tetsuji16/pyecharts-express"
Documentation = "https://github.com/tetsuji16/pyecharts-express#readme"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
